    * incompatible change: value encoding md5 renamed to cryptmd5
    * new configure option --with-libcrypto
  - extended ldapvi syntax with change records
    * new key 'V'
  - new command line arguments --in, --out, --delete, --rename
  - LDIF support in the editor
    * new command line arguments --ldif, --ldapvi, --ldapsearch, --ldapmodify,
      --ldapdelete, --ldapmoddn
  - UTF-8 support; new command line option --encoding
  - use libreadline to read the user name
  - support for configuration files ~/.ldapvirc or /etc/ldapvi.conf in
    ldapvi syntax, taking precedence over .ldaprc and /etc/ldap.conf if
    present
    * new command line argument --profile.
Bugfixes:
  - always replace entire attributes (fixing a bug reported by Javier Barroso)
  - fixed LDIF export to always Base64-encode non-ASCII values
  - oops: escape backslashes properly
  - schema reading (--class) works with Fedora DS now
Build change:
  - preprocessor sellout: automagically #ifdefed support for libldap 2.1
Last not least:
  - new documentation in manual/manual.xml

1.5 2005-12-11
  - fixed argument parsing (thanks to Andrea Barisani for the report)

1.4 2005-11-15 r43
  - updated for libldap 2.2
  - cygwin works
  - fixed bogus modify operation when moving an entry without changing its rdn
  - new command line option --tls
  - new command line option -R
  - workaround for Microsoft ROOT DSE oddity: need * instead of +

1.3 2005-11-13 r33
  * last release to require libldap 2.1
  - in ldap_delete, treat notAllowedOnNonLeaf as non-fatal, allowing
    subtrees to be deleted in incorrect order
  - check for empty DNs later, so that search results including the
    ROOT DSE do not lead to a parse error anymore
  - for syntax errors, try to open the editor near the error position.
    (This assumes support for the +N argument vi and emacs understand.)
  - new command line argument --config: print basic LDAP library parameters
    to standard output for easy .ldaprc setup